<?xml version="1.0"?>
<package format="2">
  <name>lidar_ohyejun</name>
  <version>0.0.1</version>
  <description>LiDAR clustering and tracking package</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>libeigen3-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libopencv-dev</depend>

  <depend>patchworkpp</depend>

  <export>
  </export>
</package>